using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorPams {

    public static string ifmove = "ifmove";//bool
    public static string ifidle = "ifidle";//bool
    public static string attack = "attack";//trigger
    public static string die = "die";//trigger
}
